Revert "changed all task dates to 5th Jan 2020"
This reverts commit b9c425bde70e7be3f021993cf64c434534395dec.

--- a/Trial 3/index3.html
+++ b/Trial 3/index3.html
@@ -149,7 +149,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room AS5, AC10 and AM1</b> which are in <b>Building A</b> are free on <b>5th Jan 2020</b> from <b>13:00 to 14:00</b>. </p>
+                    <p> Check if <b>room AS5, AC10 and AM1</b> which are in <b>Building A</b> are free on <b>01/16/2020</b> from <b>13:00 to 14:00</b>. </p>
                 </div>
             </div>
 
