--- a/Trial 3/task1pre.html
+++ b/Trial 3/task1pre.html
@@ -13,7 +13,7 @@
     <div id="description">
         <h1 style>TASK 1</h1>
 
-        <p> Check if <b>room AC3, AC9 and BC1</b> which are of <b>Conference Room Type</b> are free on <b>5th Jan 2020</b> from <b>09:00 to 10:00</b>. </p>
+        <p> Check if <b>room AC3, AC9 and BC1</b> which are of <b>Conference Room Type</b> are free on <b>01/17/2020</b> from <b>09:00 to 10:00</b>. </p>
         <div class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="goToTask1(); return false;">Go to task</a>
         </div>
