--- a/Trial 6/index.html
+++ b/Trial 6/index.html
@@ -134,7 +134,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room CM12</b> which is of <b>Music Room Type</b> and in <b>Building C</b> is free on <b>5th Jan 2020</b> from <b>17:00 to 18:00</b>. </p>
+                    <p> Check if <b>room CM12</b> which is of <b>Music Room Type</b> and in <b>Building C</b> is free on <b>12/24/2019</b> from <b>17:00 to 18:00</b>. </p>
                 </div>
             </div>
 
