--- a/Trial 6/index2.html
+++ b/Trial 6/index2.html
@@ -134,7 +134,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room AP7</b> which is of <b>Practice Room Type</b> and in <b>Building A</b> is free on <b>5th Jan 2020</b> from <b>12:00 to 19:00</b>. </p>
+                    <p> Check if <b>room AP7</b> which is of <b>Practice Room Type</b> and in <b>Building A</b> is free on <b>01/11/2020</b> from <b>12:00 to 19:00</b>. </p>
                 </div>
             </div>
 
