--- a/Trial 7/index.html
+++ b/Trial 7/index.html
@@ -134,7 +134,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room BP10, BO20 and BM1</b> which are in <b>Building B</b> are free on <b>5th Jan 2020</b> from <b>20:00 to 22:00</b>. </p>
+                    <p> Check if <b>room BP10, BO20 and BM1</b> which are in <b>Building B</b> are free on <b>02/13/2020</b> from <b>20:00 to 22:00</b>. </p>
                 </div>
             </div>
 
