--- a/Trial 7/index2.html
+++ b/Trial 7/index2.html
@@ -134,7 +134,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room CM10, CC15 and CS11</b> which are in <b>Building C</b> are free on <b>5th Jan 2020</b> from <b>08:00 to 11:00</b>. </p>
+                    <p> Check if <b>room CM10, CC15 and CS11</b> which are in <b>Building C</b> are free on <b>03/02/2020</b> from <b>08:00 to 11:00</b>. </p>
                 </div>
             </div>
 
