--- a/Trial 8/index3.html
+++ b/Trial 8/index3.html
@@ -134,7 +134,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room BM2, BM8 and CM13</b> which are of <b>Music Room Type</b> are free on <b>5th Jan 2020</b> from <b>07:00 to 11:00</b>. </p>
+                    <p> Check if <b>room BM2, BM8 and CM13</b> which are of <b>Music Room Type</b> are free on <b>11/28/2019</b> from <b>07:00 to 11:00</b>. </p>
                 </div>
             </div>
 
