--- a/Trial 3/task2pre.html
+++ b/Trial 3/task2pre.html
@@ -13,7 +13,7 @@
     <div id="description">
         <h1 style>TASK 2</h1>
 
-        <p> Check if <b>room CS16, CS3 and CP2</b> which are in <b>Building C</b> are free on <b>5th Jan 2020</b> from <b>07:00 to 10:00</b>. </p>
+        <p> Check if <b>room CS16, CS3 and CP2</b> which are in <b>Building C</b> are free on <b>12/20/2019</b> from <b>07:00 to 10:00</b>. </p>
         <div class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="goToTask2(); return false;">Go to task</a>
         </div>
