--- a/Trial 4/index.html
+++ b/Trial 4/index.html
@@ -147,7 +147,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room CP10, CO20 and CM1</b> which are in <b>Building C</b> are free on <b>5th Jan 2020</b> from <b>21:00 to 22:00</b>. </p>
+                    <p> Check if <b>room CP10, CO20 and CM1</b> which are in <b>Building C</b> are free on <b>02/25/2020</b> from <b>21:00 to 22:00</b>. </p>
             </div>
         </div>
 
