--- a/Trial 4/task1pre.html
+++ b/Trial 4/task1pre.html
@@ -13,7 +13,7 @@
     <div id="description">
         <h1 style>TASK 1</h1>
 
-        <p> Check if <b>room CP10, CO20 and CM1</b> which are in <b>Building C</b> are free on <b>5th Jan 2020</b> from <b>21:00 to 22:00</b>. </p>
+        <p> Check if <b>room CP10, CO20 and CM1</b> which are in <b>Building C</b> are free on <b>02/25/2020</b> from <b>21:00 to 22:00</b>. </p>
         <div class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="goToTask1(); return false;">Go to task</a>
         </div>
