--- a/Trial 5/index3.html
+++ b/Trial 5/index3.html
@@ -134,7 +134,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room BS13</b> which is of <b>Study Room Type</b> and in <b>Building B</b> is free on <b>5th Jan 2020</b> from <b>10:00 to 13:00</b>. </p>
+                    <p> Check if <b>room BS13</b> which is of <b>Study Room Type</b> and in <b>Building B</b> is free on <b>12/31/2019</b> from <b>10:00 to 13:00</b>. </p>
                 </div>
             </div>
 
