--- a/Trial 6/index3.html
+++ b/Trial 6/index3.html
@@ -134,7 +134,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room BO10</b> which is of <b>Open Space Type</b> and in <b>Building B</b> is free on <b>5th Jan 2020</b> from <b>11:00 to 13:00</b>. </p>
+                    <p> Check if <b>room BO10</b> which is of <b>Open Space Type</b> and in <b>Building B</b> is free on <b>03/22/2020</b> from <b>11:00 to 13:00</b>. </p>
                 </div>
             </div>
 
