--- a/Trial 8/task3pre.html
+++ b/Trial 8/task3pre.html
@@ -12,7 +12,7 @@
 <body>
     <div id="description">
         <h1 style>TASK 3</h1>
-        <p> Check if <b>room BM2, BM8 and CM13</b> which are of <b>Music Room Type</b> are free on <b>5th Jan 2020</b> from <b>07:00 to 11:00</b>. </p>
+        <p> Check if <b>room BM2, BM8 and CM13</b> which are of <b>Music Room Type</b> are free on <b>11/28/2019</b> from <b>07:00 to 11:00</b>. </p>
 
         <div class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="goToTask3(); return false;">Go to task</a>
