--- a/Trial_1/task1pre.html
+++ b/Trial_1/task1pre.html
@@ -13,7 +13,7 @@
     <div id="description">
         <h1 style>TASK 1</h1>
 
-        <p> Check if <b>room AC10</b> which is of <b>Conference Room Type</b> and in <b>Building A</b> is free on <b>5th Jan 2020</b> from <b>14:00 to 17:00</b>. </p>
+        <p> Check if <b>room AC10</b> which is of <b>Conference Room Type</b> and in <b>Building A</b> is free on <b>01/15/2020</b> from <b>14:00 to 17:00</b>. </p>
         <div  class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="goToTask1(); return false;">Go to task</a>
         </div>
