--- a/Trial_1/task3pre.html
+++ b/Trial_1/task3pre.html
@@ -13,7 +13,7 @@
     <div id="description">
         <h1 style>TASK 3</h1>
 
-        <p> Check if <b>room CO18</b> which is of <b>Open Space Type</b> and in <b>Building C</b> is free on <b>5th Jan 2020</b> from <b>13:00 to 15:00</b>. </p>
+        <p> Check if <b>room CO18</b> which is of <b>Open Space Type</b> and in <b>Building C</b> is free on <b>12/25/2019</b> from <b>13:00 to 15:00</b>. </p>
         <div  class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="goToTask3(); return false;">Go to task</a>
         </div>
