--- a/Trial_2/index.html
+++ b/Trial_2/index.html
@@ -147,7 +147,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room CM7</b> which is of <b>Music Room Type</b> and in <b>Building C</b> is free on <b>5th Jan 2020</b> from <b>11:00 to 15:00</b>. </p>
+                    <p> Check if <b>room CM7</b> which is of <b>Music Room Type</b> and in <b>Building C</b> is free on <b>12/24/2019</b> from <b>11:00 to 15:00</b>. </p>
             </div>
         </div>
 
