--- a/Trial_2/task3pre.html
+++ b/Trial_2/task3pre.html
@@ -13,7 +13,7 @@
     <div id="description">
         <h1 style>TASK 3</h1>
 
-        <p> Check if <b>room AO1</b> which is of <b>Open Space Type</b> and in <b>Building A</b> is free on <b>5th Jan 2020</b> from <b>09:00 to 13:00</b>. </p>
+        <p> Check if <b>room AO1</b> which is of <b>Open Space Type</b> and in <b>Building A</b> is free on <b>12/31/2019</b> from <b>09:00 to 13:00</b>. </p>
         <div  class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="goToTask3(); return false;">Go to task</a>
         </div>
