change date display format

--- a/Trial 3/index.html
+++ b/Trial 3/index.html
@@ -147,7 +147,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room AC3, AC9 and BC1</b> which are of <b>Conference Room Type</b> are free on <b>01/17/2020</b> from <b>09:00 to 10:00</b>. </p>
+                    <p> Check if <b>room AC3, AC9 and BC1</b> which are of <b>Conference Room Type</b> are free on <b>17th Jan 2020</b> from <b>09:00 to 10:00</b>. </p>
             </div>
         </div>
 
