--- a/Trial 4/index3.html
+++ b/Trial 4/index3.html
@@ -149,7 +149,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room AS2, CS1 and BS7</b> which are of <b>Study Room Type</b> are free on <b>11/22/2019</b> from <b>07:00 to 11:00</b>. </p>
+                    <p> Check if <b>room AS2, CS1 and BS7</b> which are of <b>Study Room Type</b> are free on <b>22nd Nov 2019</b> from <b>07:00 to 11:00</b>. </p>
                 </div>
             </div>
 
