--- a/Trial 5/index.html
+++ b/Trial 5/index.html
@@ -134,7 +134,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room BM10</b> which is of <b>Music Room Type</b> and in <b>Building B</b> is free on <b>02/24/2020</b> from <b>12:00 to 15:00</b>. </p>
+                    <p> Check if <b>room BM10</b> which is of <b>Music Room Type</b> and in <b>Building B</b> is free on <b>24th Feb 2020</b> from <b>12:00 to 15:00</b>. </p>
                 </div>
             </div>
 
