--- a/Trial 5/index2.html
+++ b/Trial 5/index2.html
@@ -134,7 +134,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room AO14</b> which is of <b>Open Space Type</b> and in <b>Building A</b> is free on <b>11/29/2019</b> from <b>20:00 to 21:00</b>. </p>
+                    <p> Check if <b>room AO14</b> which is of <b>Open Space Type</b> and in <b>Building A</b> is free on <b>29th Nov 2019</b> from <b>20:00 to 21:00</b>. </p>
                 </div>
             </div>
 
