--- a/Trial 7/task2pre.html
+++ b/Trial 7/task2pre.html
@@ -12,7 +12,7 @@
 <body>
     <div id="description">
         <h1 style>TASK 2</h1>
-        <p> Check if <b>room CM10, CC15 and CS11</b> which are in <b>Building C</b> are free on <b>03/02/2020</b> from <b>08:00 to 11:00</b>. </p>
+        <p> Check if <b>room CM10, CC15 and CS11</b> which are in <b>Building C</b> are free on <b>2nd Mar 2020</b> from <b>08:00 to 11:00</b>. </p>
         <div class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="goToTask2(); return false;">Go to task</a>
         </div>
