--- a/Trial 8/index.html
+++ b/Trial 8/index.html
@@ -134,7 +134,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room CP10, CO20 and CM1</b> which are in <b>Building C</b> are free on <b>02/25/2020</b> from <b>14:00 to 15:00</b>. </p>
+                    <p> Check if <b>room CP10, CO20 and CM1</b> which are in <b>Building C</b> are free on <b>25th Feb 2020</b> from <b>14:00 to 15:00</b>. </p>
                 </div>
             </div>
 
