--- a/Trial 8/index2.html
+++ b/Trial 8/index2.html
@@ -134,7 +134,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room BM10, BC15 and BS11</b> which are in <b>Building B</b> are free on <b>03/02/2020</b> from <b>08:00 to 11:00</b>. </p>
+                    <p> Check if <b>room BM10, BC15 and BS11</b> which are in <b>Building B</b> are free on <b>2nd Mar 2020</b> from <b>08:00 to 11:00</b>. </p>
                 </div>
             </div>
 
