--- a/Trial_1/index.html
+++ b/Trial_1/index.html
@@ -147,7 +147,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room AC10</b> which is of <b>Conference Room Type</b> and in <b>Building A</b> is free on <b>01/15/2020</b> from <b>14:00 to 17:00</b>. </p>
+                    <p> Check if <b>room AC10</b> which is of <b>Conference Room Type</b> and in <b>Building A</b> is free on <b>15th Jan 2020</b> from <b>14:00 to 17:00</b>. </p>
             </div>
         </div>
 
