--- a/Trial 6/task2pre.html
+++ b/Trial 6/task2pre.html
@@ -12,7 +12,7 @@
 <body>
     <div id="description">
         <h1 style>TASK 2</h1>
-        <p> Check if <b>room AP7</b> which is of <b>Practice Room Type</b> and in <b>Building A</b> is free on <b>01/11/2020</b> from <b>12:00 to 19:00</b>. </p>
+        <p> Check if <b>room AP7</b> which is of <b>Practice Room Type</b> and in <b>Building A</b> is free on <b>11th Jan 2020</b> from <b>12:00 to 19:00</b>. </p>
         <div class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="goToTask2(); return false;">Go to task</a>
         </div>
