--- a/Trial 7/task1pre.html
+++ b/Trial 7/task1pre.html
@@ -13,7 +13,7 @@
     <div id="description">
         <h1 style>TASK 1</h1>
 
-        <p> Check if <b>room BP10, BO20 and BM1</b> which are in <b>Building B</b> are free on <b>02/13/2020</b> from <b>20:00 to 22:00</b>. </p>
+        <p> Check if <b>room BP10, BO20 and BM1</b> which are in <b>Building B</b> are free on <b>13th Feb 2020</b> from <b>20:00 to 22:00</b>. </p>
         <div class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="goToTask1(); return false;">Go to task</a>
         </div>
