--- a/Trial 7/task3pre.html
+++ b/Trial 7/task3pre.html
@@ -12,7 +12,7 @@
 <body>
     <div id="description">
         <h1 style>TASK 3</h1>
-        <p> Check if <b>room AS2, CS1 and BS7</b> which are of <b>Study Room Type</b> are free on <b>03/11/2020</b> from <b>11:00 to 15:00</b>. </p>
+        <p> Check if <b>room AS2, CS1 and BS7</b> which are of <b>Study Room Type</b> are free on <b>11th Mar 2020</b> from <b>11:00 to 15:00</b>. </p>
         <div class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="goToTask3(); return false;">Go to task</a>
         </div>
