--- a/Trial_1/index3.html
+++ b/Trial_1/index3.html
@@ -149,7 +149,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room CO18</b> which is of <b>Open Space Type</b> and in <b>Building C</b> is free on <b>12/25/2019</b> from <b>13:00 to 15:00</b>. </p>
+                    <p> Check if <b>room CO18</b> which is of <b>Open Space Type</b> and in <b>Building C</b> is free on <b>25th Dec 2019</b> from <b>13:00 to 15:00</b>. </p>
                 </div>
             </div>
 
