--- a/Trial 6/index3.html
+++ b/Trial 6/index3.html
@@ -11,6 +11,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="append-html.js"></script>
 
+<link rel="stylesheet" href="jquery-ui.min.css">
+<script src="external/jquery/jquery.js"></script>
+<script src="jquery-ui.min.js"></script>
+
 <body>
     <div id="nav-bar-1">
         <p id="welcome-msg">Welcome, e0001234</p>
