--- a/arrangement2.1/Trial 8/index.html
+++ b/arrangement2.1/Trial 8/index.html
@@ -64,14 +64,14 @@
                 </div>
                 <div id="Facility/Resource">
                     <p>Facility/Resource(s)*:</p>
-                    <div style="height: 295px; overflow: auto;">
+                    <div style="height: 380px;">
                         <!-- <div class="checkbox-list" id="Room-options" style="display: none;">
                             <script src="createroom.js"></script>
                             <script> createRooms();</script>
                         </div> -->
                         <div class="form-group">
                             <!-- <label for="exampleFormControlSelect2">Example multiple select</label> -->
-                            <select multiple class="form-control" id="Room-options" style="display: none; height: 275px; overflow: auto;">
+                            <select multiple class="form-control" id="Room-options" style="display: none; height: 372px; overflow: auto;">
                                 <script src="createroom.js"></script>
                                 <script>createRoomsList();</script>
                             </select>
