fix scrollbar bug

--- a/arrangement2.1/Trial 6/index.html
+++ b/arrangement2.1/Trial 6/index.html
@@ -64,7 +64,7 @@
                 </div>
                 <div id="Facility/Resource">
                     <p>Facility/Resource(s)*:</p>
-                    <div style="height: 380px; overflow: auto;">
+                    <div style="height: 380px;">
                         <!-- <div class="checkbox-list" id="Room-options" style="display: none;">
                             <script src="createroom.js"></script>
                             <script> createRooms();</script>
